--- a/Kooboo.Toolkits/Kooboo.Extensions.UrlMapperExtension/Kooboo.Extensions.UrlMapperExtension.csproj
+++ b/Kooboo.Toolkits/Kooboo.Extensions.UrlMapperExtension/Kooboo.Extensions.UrlMapperExtension.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Kooboo.Extensions.UrlMapperExtension</RootNamespace>
     <AssemblyName>Kooboo.Extensions.UrlMapperExtension</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,43 +30,56 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kooboo">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.dll</HintPath>
+    <Reference Include="Kooboo, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Account">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Account.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Account, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Account.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Caching">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Caching.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Caching, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Caching.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Common">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Common.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Common, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Common.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Common.Runtime.Dependency.Ninject">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Common.Runtime.Dependency.Ninject.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Common.Runtime.Dependency.Ninject, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Common.Runtime.Dependency.Ninject.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Content">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Content.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Content, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Content.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Form">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Form.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Form, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Form.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Membership">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Membership.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Membership, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Membership.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Search">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Search.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Search, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Search.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Sites">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Sites.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Sites, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Sites.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Sites.TemplateEngines.Razor">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Sites.TemplateEngines.Razor.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Sites.TemplateEngines.Razor, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Sites.TemplateEngines.Razor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Web">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411\lib\Kooboo.CMS.Web.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Web, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Web.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -73,29 +88,29 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.30506.0\lib\net40\System.Web.Mvc.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.20710.0\lib\net40\System.Web.Razor.dll</HintPath>
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.dll</HintPath>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
