--- a/Kooboo.Toolkits/lib/Kooboo.Core.nuspec
+++ b/Kooboo.Toolkits/lib/Kooboo.Core.nuspec
@@ -6,7 +6,7 @@
         <title>Kooboo CMS Core Binaries</title>
         <authors>Kooboo</authors>
         <owners>Yardi Technology limited</owners>
-        <projectUrl>https://github.com/Kooboo/CMS</projectUrl>
+        <projectUrl>https://github.com/Tsingbo-Kooboo/KoobooMvc5</projectUrl>
         <iconUrl>http://www.kooboo.com/favicon.ico</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>This package only contains assemblies and can be used for package development.</description>
