--- a/Kooboo.Toolkits/packages/repositories.config
+++ b/Kooboo.Toolkits/packages/repositories.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Kooboo.CMS.Content.DatabaseMigration\packages.config" />
   <repository path="..\Kooboo.CMS.Content.UserKeyGenerator.Chinese\packages.config" />
+  <repository path="..\Kooboo.CMS.Toolkit.Controls\packages.config" />
   <repository path="..\Kooboo.CMS.Toolkit.HtmlMinify\packages.config" />
+  <repository path="..\Kooboo.CMS.Toolkit\packages.config" />
   <repository path="..\Kooboo.Extensions.UrlMapperExtension\packages.config" />
   <repository path="..\UnitTests\Kooboo.Toolkits.Test\packages.config" />
 </repositories>
