--- a/Kooboo.CMS.Synchronous/Kooboo.CMS.Synchronous.SyncContentSchema/Kooboo.CMS.Synchronous.SyncContentSchema.csproj
+++ b/Kooboo.CMS.Synchronous/Kooboo.CMS.Synchronous.SyncContentSchema/Kooboo.CMS.Synchronous.SyncContentSchema.csproj
@@ -30,41 +30,53 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kooboo">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.dll</HintPath>
+    <Reference Include="Kooboo, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Account">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Account.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Account, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Account.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Caching">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Caching.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Caching, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Caching.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Common">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Common.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Common, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Common.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Common.Runtime.Dependency.Ninject">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Common.Runtime.Dependency.Ninject.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Common.Runtime.Dependency.Ninject, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Common.Runtime.Dependency.Ninject.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Content">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Content.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Content, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Content.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Form">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Form.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Form, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Form.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Membership">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Membership.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Membership, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Membership.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Search">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Search.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Search, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Search.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Sites">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Sites.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Sites, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Sites.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Sites.TemplateEngines.Razor">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Sites.TemplateEngines.Razor.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Sites.TemplateEngines.Razor, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Sites.TemplateEngines.Razor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kooboo.CMS.Web">
-      <HintPath>..\packages\Kooboo.Core.4.4.0.0411-beta1\lib\Kooboo.CMS.Web.dll</HintPath>
+    <Reference Include="Kooboo.CMS.Web, Version=4.5.0.817, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kooboo.Core.4.5.0.817\lib\Kooboo.CMS.Web.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -73,29 +85,29 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.30506.0\lib\net40\System.Web.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.20710.0\lib\net40\System.Web.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -104,6 +116,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CMSAssemblyInfoGlobal.cs">
+      <Link>CMSAssemblyInfoGlobal.cs</Link>
+    </Compile>
     <Compile Include="..\Wrappers\SchemaManagerWrapper.cs">
       <Link>SchemaManagerWrapper.cs</Link>
     </Compile>
